# 单独编译每个模块时make clean后重新cmake ..
if(CMAKE_PLATFORM MATCHES "86")
    # add_subdirectory(PointcloudAlg)
    add_subdirectory(VideoAlg)
    # add_subdirectory(FusionAlg)
    # add_subdirectory(SceneAlg)
    # add_subdirectory(EventAlg)
    # add_subdirectory(TriggerAlg)
    # add_subdirectory(2K1VAlg)
    add_subdirectory(TestAlg)
elseif(CMAKE_PLATFORM MATCHES "1046")
    add_subdirectory(FusionAlg)
    add_subdirectory(SceneAlg)
    add_subdirectory(EventAlg)
    add_subdirectory(TriggerAlg)
elseif(CMAKE_PLATFORM MATCHES "220")
    add_subdirectory(VideoAlg220)
elseif(CMAKE_PLATFORM MATCHES "11")
    add_subdirectory(PcAlgZU11)
    add_subdirectory(PointPostAlg)
endif()
